--- a/geo-byte-frontend/src/app/app.component.html
+++ b/geo-byte-frontend/src/app/app.component.html
@@ -11,9 +11,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item text-muted">
-                        <a class="nav-link active" aria-current="page" [routerLink]="['/locations']">View Locations</a>
+                        <a class="nav-link" [ngClass]="{'active': isActivePage('locations')}" aria-current="page" [routerLink]="['/locations']">View Locations</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" [routerLink]="['/route']">Get Optimal Route</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" [ngClass]="{'active': isActivePage('route')}" [routerLink]="['/route']">Get Optimal Route</a>
+                    </li>
                 </ul>
                 <!-- <a *ngIf="!getAuthenticated()" class="btn btn-primary ml-auto hover-top-shadow" [routerLink]="['/sign-in']">Sign In / Sign
                     Up</a>
